[gd_scene load_steps=5 format=3 uid="uid://bcdiuwfvefmwq"]

[ext_resource type="PackedScene" uid="uid://cxx6lax7bfo1f" path="res://humanAnimation.tscn" id="1_uww4r"]
[ext_resource type="Script" path="res://human_enemy.gd" id="1_v2lot"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkq4r"]
size = Vector2(969, 283)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o77fc"]
size = Vector2(107, 401.5)

[node name="humanEnemy" type="CharacterBody2D"]
script = ExtResource("1_v2lot")

[node name="LightArea" type="Area2D" parent="."]
position = Vector2(485, -90)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightArea"]
position = Vector2(0, 16.5)
shape = SubResource("RectangleShape2D_mkq4r")
debug_color = Color(0.687323, 0.499645, 3.85046e-07, 0.42)

[node name="HumanAnimation" parent="." instance=ExtResource("1_uww4r")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 29.25)
shape = SubResource("RectangleShape2D_o77fc")

[node name="DirectionTimer" type="Timer" parent="."]

[node name="LightFlickerTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animate" from="." to="HumanAnimation" method="_on_human_enemy_animate"]
[connection signal="flicker" from="." to="HumanAnimation" method="_on_human_enemy_flicker"]
[connection signal="body_entered" from="LightArea" to="." method="_on_light_area_body_entered"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="timeout" from="LightFlickerTimer" to="." method="_on_light_flicker_timer_timeout"]
